# tallyman

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  REVIEW.adoc  RNAseqs.fasta  SRR10999547.count.out  SRR1099957.4.bowtie.out  SRR1099957.out  SRR1099957comp.out  differences  mk-outs.sh  parseSAM.pl  profile.py  pyproject.toml  pytest.ini  remove_lines.py
.github/workflows/: the_count-ci.yml
docker/: Dockerfile  Makefile
experiments/: hash-collisions.ipynb
fixtures/: .gitignore  DCEs.fasta  README.md  RNAs.fasta  RNAseqs.fasta  human.fa  human.fasta  human.fastq  test-dna.tar.xz
src/: alphabet.rs  compress.rs  constants.rs  fasta.rs  fasta_read.rs  hash.rs  hashmap.rs  main.rs  search.rs  seqloader.rs  sequence.rs
test/: test_generator.py
tests/: cli.rs
tests/inputs/: dce.fa  dna.fasta  dna.fastq  dups.fa  mk_fastq.py  rna-50k.fasta  rna.fa  too_short.fa
tests/outputs/: full.txt  out-100k-fasta.txt  out-100k-fastq.txt  out-50k-fasta.txt  out-50k-fastq.txt  out-50k.txt  rna-50k.fastq.txt
the_count/: __main__.py  _process_chunks.py  bit_compressor.py  bloomfilter.py  count.py  count_occurrences.py  exceptions.py  fasta_utils.py  random_insert_position.py  search4.py
