[package]
name = "the_count"
version = "0.1.0"
authors = ["George Lesica <george@lesica.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
multimap = "0.8.2"

[profile.release]
debug = true
