[package]
name = "tallyman"
version = "0.3.0"
authors = ["George Lesica <george@lesica.com>", 
  "Ken Youens-Clark <kyclark@arizona.edu>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
kseq = "0.5"
clap = { version = "4.5.7", features = ["derive"] }
rayon = "1.10.0"
itertools = "0.13.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
rand = "0.8"
tempfile = "3"

[profile.release]
debug = true
