[tool.poetry]
name = "the_count"
version = "0.1.0"
description = "The Count can count sequences in a longer sequence."
authors = ["Sarah Walling <sarah.walling@umontana.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mmh3 = "^2.5.1"
bitarray = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
ipython = "^7.13.0"
black = "^19.10b0"

[tool.black]
line-length = 80
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
